<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                android:id="@+id/top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:padding="16dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/import_from_elbepos_title"
                        android:layout_gravity="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginBottom="8dp"
                        />

                    <Button
                        android:id="@+id/button_import_csv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Import Elbepos Csv file"
                        android:layout_gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/fileTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/no_file_selected_title"
                        android:layout_gravity="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/button_import_csv" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Space
                android:id="@+id/space"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/top"
                app:layout_constraintBottom_toTopOf="@id/bottom"
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <androidx.cardview.widget.CardView
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                android:id="@+id/bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/space">

                <LinearLayout
                    android:padding="8dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/import_from_speedy_title"
                        android:layout_gravity="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginBottom="8dp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/steuersatz_title"
                            android:layout_gravity="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginBottom="8dp"
                            />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <EditText
                                android:layout_margin="8dp"
                                android:id="@+id/editTextNumberImhausOldValue1"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="number"
                                />
                            <EditText
                                android:layout_margin="8dp"
                                android:id="@+id/editTextNumberImhausNewValue1"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="number"
                                android:hint="@string/new_value"
                                />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <EditText
                                android:layout_margin="8dp"
                                android:id="@+id/editTextNumberImhausOldValue2"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="number" />
                            <EditText
                                android:layout_margin="8dp"
                                android:id="@+id/editTextNumberImhausNewValue2"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="number"
                                android:hint="@string/new_value"
                                />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/steuersatz2_title"
                            android:layout_gravity="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginBottom="8dp"
                            />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <EditText
                                android:layout_margin="8dp"
                                android:id="@+id/editTextNumberAusserhausOldValue1"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="number"
                                />
                            <EditText
                                android:layout_margin="8dp"
                                android:id="@+id/editTextNumberAusserhausNewValue1"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="number"
                                android:hint="@string/new_value"
                                />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <EditText
                                android:layout_margin="8dp"
                                android:id="@+id/editTextNumberAusserhausOldValue2"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="number" />
                            <EditText
                                android:layout_margin="8dp"
                                android:id="@+id/editTextNumberAusserhausNewValue2"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="number"
                                android:hint="@string/new_value"
                                />
                        </LinearLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/button_import_csv_speedy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Import Speedy Csv file"
                        android:layout_margin="8dp"
                        android:layout_gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/fileTextViewSpeedy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/no_file_selected_title"
                        android:layout_gravity="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/button_import_csv" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>